--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
             Generate Palette
         </button>
     </div>
-    <source src="script.js"></source>
+    <script src="script.js"></script>
 </body>
 </html>
