Colour Locking Commit

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <span class="hex-value">
                         #E1F5FE
                     </span>
+                    <i class="fas fa-lock-open lock-btn" title="Lock color"></i>
                     <i class="fas fa-copy copy-btn" title="Copy to clipboard"></i>
                 </div>
             </div>
@@ -28,6 +29,7 @@
                     <span class="hex-value">
                         #B3E5FC
                     </span>
+                    <i class="fas fa-lock-open lock-btn" title="Lock color"></i>
                     <i class="fas fa-copy copy-btn" title="Copy to clipboard"></i>
                 </div>
             </div>
@@ -38,6 +40,7 @@
                     <span class="hex-value">
                         #81D4FA
                     </span>
+                    <i class="fas fa-lock-open lock-btn" title="Lock color"></i>
                     <i class="fas fa-copy copy-btn" title="Copy to clipboard"></i>
                 </div>
             </div>
@@ -48,6 +51,7 @@
                     <span class="hex-value">
                         #4FC3F7
                     </span>
+                    <i class="fas fa-lock-open lock-btn" title="Lock color"></i>
                     <i class="fas fa-copy copy-btn" title="Copy to clipboard"></i>
                 </div>
             </div>
@@ -58,6 +62,7 @@
                     <span class="hex-value">
                         #29B6F6
                     </span>
+                    <i class="fas fa-lock-open lock-btn" title="Lock color"></i>
                     <i class="fas fa-copy copy-btn" title="Copy to clipboard"></i>
                 </div>
             </div>
