--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <div class="container">
         <h1>Colour Palette Generator</h1>
+        <div class="recommended-section">
+            <label for="palette-mood">Recommended Palettes:</label>
+            <select id="palette-mood">
+                <option value="">Select mood/situation</option>
+                <option value="calm">Calm</option>
+                <option value="energetic">Energetic</option>
+                <option value="romantic">Romantic</option>
+                <option value="nature">Nature</option>
+                <option value="business">Business</option>
+                <option value="night">Night</option>
+            </select>
+            <button id="apply-recommended" disabled>Apply Palette</button>
+            <div id="recommended-preview" class="palette-container" style="margin-top:1rem;"></div>
+        </div>
         <div class="palette-container">
             <!--Color Box 1-->
             <div class="color-box">
