--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎨 Advanced Colour Palette Generator</h1>
+        <h1>NEXUS PALETTE GENERATOR</h1>
 
         <!-- Mood-Based Palettes Section -->
         <div class="section">
@@ -56,6 +56,37 @@
                     <option value="monochromatic">Monochromatic</option>
                 </select>
                 <button id="generate-harmony" class="btn">Generate Harmony</button>
+            </div>
+        </div>
+
+        <!-- AI Color Name Generator Section -->
+        <div class="section">
+            <h3><i class="fas fa-robot"></i> AI Color Name Generator</h3>
+            <div class="ai-controls">
+                <button id="toggle-names" class="btn">🎯 Generate Creative Names</button>
+                <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">
+                    Generate unique, creative names for your colors using AI-powered algorithms
+                </p>
+            </div>
+        </div>
+
+        <!-- Accessibility Checker Section -->
+        <div class="section">
+            <h3><i class="fas fa-universal-access"></i> Accessibility Checker</h3>
+            <div class="accessibility-controls">
+                <button id="check-accessibility" class="btn">🔍 Check WCAG Compliance</button>
+                <div class="colorblind-wrapper">
+                    <label for="colorblind-sim">Colorblind Simulation:</label>
+                    <select id="colorblind-sim" class="mood-select">
+                        <option value="">Normal Vision</option>
+                        <option value="protanopia">Protanopia (Red-blind)</option>
+                        <option value="deuteranopia">Deuteranopia (Green-blind)</option>
+                        <option value="tritanopia">Tritanopia (Blue-blind)</option>
+                    </select>
+                </div>
+                <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">
+                    Test your palette for accessibility compliance and colorblind-friendly design
+                </p>
             </div>
         </div>
         <!-- Export/Import Section -->
